# stay-home-ctf-2020

./: .gitignore  .travis.yml  README.md  check.sh  logs.sh  start.sh  stop.sh
checkers/: requirements.txt
checkers/exoplanet/: checker.py  exo_lib.py
checkers/grox/: checker.py  grox_lib.py
checkers/ice-and-fire/: checker.py  iaf_lib.py
checkers/martian/: checker.py  martian_lib.py
checkers/msp/: checker.py  client.py  fun_payloads.py
checkers/planetzor/: checker.py  planetzor_lib.py  requirements.txt  reviews.txt
checkers/spacesos/: checker.py  planets.txt  spacesos_lib.py  spacesos_pb2.py  spacesos_pb2_grpc.py
internal/grox/: Cargo.toml  Dockerfile  build.sh  initialize.sh
internal/grox/front/: .browserslistrc  .eslintrc.js  package.json  postcss.config.js  vue.config.js
internal/grox/front/public/: index.html
internal/grox/front/src/: App.vue  main.js
internal/grox/front/src/components/: LoginForm.vue  MeForm.vue  RegisterForm.vue
internal/grox/front/src/config/: index.js
internal/grox/front/src/router/: index.js
internal/grox/front/src/store/: index.js
internal/grox/front/src/views/: CreateEmpire.vue  Empire.vue  Empires.vue  Index.vue  Users.vue
internal/ice-and-fire/: Dockerfile  build.sh  fcgiwrap  initialize.sh  install.sh  lib_install.sh
internal/martian/: consts.hpp  crypt.cpp  crypt.hpp  garden.cpp  home.cpp  home.hpp  item.cpp  item.hpp  items_store.cpp  main.cpp  main.hpp  martian  martian.cpp  run_socat.sh  utils.cpp  utils.hpp
services/exoplanet/: Dockerfile  docker-compose.yml
services/grox/: .dockerignore  .gitignore  (+2 more)
(+239 files in other folders)
